# ros2_patrol_robot

./: README.md
autopatrol_interfaces/: CMakeLists.txt  package.xml
autopatrol_interfaces/srv/: SpeachText.srv
autopatrol_robot/: package.xml  setup.py
autopatrol_robot/autopatrol_robot/: patrol_node.py  speaker.py
autopatrol_robot/config/: patrol_config.yaml
autopatrol_robot/launch/: autopatrol.launch.py
fishbot_application/: package.xml  setup.py
fishbot_application/fishbot_application/: get_robot_pose.py  init_robot_pose.py  nav_to_pose.py  waypoint_follower.py
fishbot_cpp/: CMakeLists.txt  package.xml
fishbot_cpp/src/: nav2_topose.cpp
fishbot_description/: CMakeLists.txt  package.xml
fishbot_description/config/: display_model.rviz  fishbot_ros2_controller.yaml
fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
fishbot_description/urdf/: first_robot.urdf  first_robot.urdf.xacro
fishbot_description/urdf/fishbot/: base.urdf.xacro  common_inertia.xacro  fishbot.ros2_control.xacro  fishbot.urdf.xacro
fishbot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
fishbot_description/urdf/fishbot/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
fishbot_description/urdf/fishbot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
fishbot_description/world/: custom_room.world
fishbot_navigation2/: CMakeLists.txt  package.xml
fishbot_navigation2/config/: nav2_params.yaml
fishbot_navigation2/launch/: navigation2.launch.py
fishbot_navigation2/maps/: room.pgm  room.yaml
